--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 20%;
+  width: 100%;
+  background-color: #282c34;
+  color: whitesmoke;
+  align-items: center;
+  padding: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-outline-secondary {
+  margin: 7px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+  width: 450px;
+  text-align: center;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-wrap: wrap;
+  
+
+}
+
+.form-select{
+  width: 40%;
+  text-align: center;
+  margin: auto;
+}
+
+.AddNewMed {
+  text-align: center;
+  width: 99%;
+}
+
+.AddNewMeeting-form {
+  width: 25%;
+  text-align: center;
+  margin: auto;
+}
+
+.form-control{
+  text-align: center;
 }
